--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
       content="草加ファーム石関【直売所在庫確認アプリ】の管理者専用アプリ"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://farmishizeki.vercel.app/" />
+    <meta property="og:url" content="https://farmishizeki-admin.vercel.app/" />
     <meta
       property="og:image"
-      content="https://farmishizeki.vercel.app/apple-touch-icon.png"
+      content="https://farmishizeki-admin.vercel.app/apple-touch-icon.png"
     />
     <meta
       property="og:image:alt"
